Update + Abgabe Präsentation

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -13,7 +13,7 @@
     This requires new ways to be found to better manage large scale software systems.
     \acrlong{sas}[s] which autonomously manage themselves using well-defined rules
     are a solution to this problem.
-    Even tough these systems are able to adapt themselves,
+    Even though these systems are able to adapt themselves,
     they struggle with unpredicted changes in their context.
     This can be solved by using \acrlong{oa}[es] for \acrlong{sas}[s] which can optimize these systems.
     There are already many \acrlong{oa}[es], but no way to classify them.
