--- a/sections/existing.tex
+++ b/sections/existing.tex
@@ -2,23 +2,8 @@
 \label{ch:Existing}
 
 % TODO:
-% - Write a short explanation of each approach:
-%     - FUSION
-%     - Multi-Agent system
-%     - Learning revised models
-%     - Cloud performance and security
-%     - FIoT
-% - Classify each approach:
-%     - FUSION
-%     - Multi-Agent system
-%     - Learning revised models
-%     - Cloud performance and security
-%     - FIoT
-
-% \begin{itemize}
-%     \item Classifying a selection of existing optimization approaches using the proposed classification.
-% \end{itemize}
-
+% - compare approaches
+% - one more approach
 % \paragraph*{Literature for this section:} \begin{itemize}
 %     \item "A multi-agent systems approach to autonomic computing" \cite{MultiAgentSystem}
 %     \item "Using a multi-agent system and artificial intelligence for monitoring and improving the cloud performance and security" \cite{ImprovingCloudPerformanceAndSecurity}
@@ -28,7 +13,7 @@
 by Elkhodary et al, 2010 \cite*{FUSION}  uses a learning and an adaptation cycle.
 The adaptation cycle corresponds to the Self-Adaptive part of the system
 and does not directly affect the learning cycle.
-The learning cycle is the optimization approach used by FUSION,
+The learning cycle is the \acrlong{oa} used by FUSION,
 it changes the behavior of the adaptation cycle.
 Both of these cycles continuously run in parallel to each other.
 \begin{itemize}[nosep]
