--- a/seminar.tex
+++ b/seminar.tex
@@ -95,17 +95,12 @@
 % - Komma Anmerkungen aus Peer Review #2
 % - Bei Exisiting müssen die Approaches noch verglichen werden
 
-% CURRENT TODO:
-% - Was trägt self-* zum Proposal bei?
-% 	- Evtl Paper nochmal lesen
-% - klarer machen das der 5w+1h teil in classification nicht von mir stammt
-% 	- manche punkte könnten ausführlicher sein
-% - classification: ausführlicher wie diese drei dimensions optimized werden können
-% - proposal: übergang mape mapping zu dimensions erklärung
-% 	- klarstellung dass es ein proposal ist
-% - Erklärung dimensions: Text bei Approach
-% - Maybe short summary sentence am ende von proposal vor den tables
-% . ML usage paper: Bezug auf die dort proposed classification?
+% TODO:
+% - Terms aus Diagrammen und Modellen kursiv schreiben
+% - Acronyms überall verwenden
+% - Figure placement
+% - Text styling: paragraphs etc.
+
 \input{sections/abstract.tex}
 \input{sections/introduction.tex}
 \input{sections/sas_classification.tex}
