--- a/sections/proposal.tex
+++ b/sections/proposal.tex
@@ -1,31 +1,32 @@
 \section{Proposal for Classification of Optimization Approaches}
 \label{ch:Proposal}
 
-% TODO: The proposal in Application of ML paper
-
 \begin{figure}[t]
     \centering
     \includegraphics[width=0.8\textwidth]{images/ClassificationProposal-OptimizationMAPEK_horizontal.png}
-    \caption{Mapping the optimization process to the MAPE-K feedback loop.}
+    \caption{Mapping the optimization process to the \acrshort{mapek} feedback loop.}
     \label{fig:MappingOptMAPEK}
 \end{figure}
 
-Using the idea from Weyns et al. 2012 paper FORMS \cite*{FORMS} to compose \acrlong{sas}[s] from
+This chapter will derive and propose a classification for \acrlong{oa}[es] for \acrlong{sas}
+based on concepts that were discussed in chapter \ref{ch:SASClassification}.
+
+\noindent Using the idea from Weyns et al. 2012 paper FORMS \cite*{FORMS} to compose \acrlong{sas}[s] from
 layers of base and reflective components, 
-an Optimization Approach for \acrlong{sas}[s] can be thought of
-as a reflective component in a layer above the Self-Adaptive System. \\
-This allows the application of multiple Optimization Approaches and even the 
-optimization of Optimization Approaches. \\
-It also establishes a connection between Optimization Approaches and \acrlong{sas}[s].
-This leads to the realization that a classification for Optimization Approaches of \acrlong{sas}[s]
+an \acrlong{oa} for \acrlong{sas}[s] can be thought of
+as a reflective component in a layer above the \acrshort{sas}. \\
+This allows the application of multiple \acrshort{oa} to \acrshort{sas} and even the 
+optimization of \acrshort{oa}. \\
+It also establishes a connection between \acrshort{oa} and \acrlong{sas}[s].
+This leads to the realization that a classification for \acrshort{oa} of \acrlong{sas}[s]
 should be based upon the same principles as the classifications for \acrlong{sas}[s]. \\
-Another benefit is a clear distinction between \acrlong{sas}[s] and Optimization Approaches for \acrlong{sas}[s].
-\acrlong{sas}[s] and Optimization Approaches are both composed of reflective components and not base components. \\
+Another benefit of this approach is a clear distinction between \acrlong{sas}[s] and \acrshort{oa} for \acrlong{sas}[s].
+\acrlong{sas}[s] and \acrshort{oa} are both composed of reflective components and not base components. \\
 Yet the Self-Adaptive System adapts base components, while the Optimization Approach adapts other reflective components.
 
 \noindent Just like the adaptation process of \acrlong{sas}[s] can be understood using
-the MAPE-K (Monitor-Analyze-Plan-Execute with Knowledge) feedback loop by Kephart and Chess, 2003 \cite*{VisionOfAutonomicComputing}.
-The process of optimizing a Self-Adaptive System can also be expressed using the MAPE-K feedback loop:
+the \acrshort{mapek} feedback loop by Kephart and Chess, 2003 \cite*{VisionOfAutonomicComputing}.
+The process of optimizing a Self-Adaptive System can also be expressed using the \acrshort{mapek} feedback loop:
 \begin{itemize}[nosep]
     \item Firstly the optimization approach has to constantly monitor the Self-Adaptive System and its context.
     \item The data gathered from monitoring can then be analyzed to decide wether or not an optimization is necessary and what should be optimized.
@@ -37,7 +38,7 @@ The process of optimizing a Self-Adaptive System can also be expressed using the
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{images/ClassificationProposal-WithDimensions.png}
-    \caption{The proposed classification for Optimization Approaches for \acrlong{sas}[s]}
+    \caption{The proposed classification for \acrlong{oa}[es] for \acrlong{sas}[s]}
     \label{fig:Proposal}
 \end{figure}
 
@@ -52,7 +53,7 @@ Each dimension is related to one of the 5W+1H questions.
 
 \subparagraph*{Location}
 Where in the system is an optimization necessary? \\
-There are three main parts in a Self-Adaptive System that can require optimizations during its lifetime.
+There are three main parts in a Self-Adaptive System that can be optimized as explained in chapter \ref{ch:SASClassification}.
 These are:
 \begin{itemize}[nosep]
     \item The Adaptation Control which can, for example, be optimized by changing or generating new adaptation rules.
@@ -84,7 +85,7 @@ Thus, the following parts can be changed:
     \item The Adaptation Technique used by the Self-Adaptive System.
     \item The Level on which the Self-Adaptive System performs changes.
 \end{itemize}
-One could argue that the Goals or Utility functions of a Self-Adaptive System could also be changed to optimize its performance.
+One could argue that the Goals or especially Utility functions of a Self-Adaptive System could also be changed to optimize its performance.
 In most cases this is not advisable because Goals and Utility functions can encode information
 like legal or safety parameters, of which the system has no intrinsic knowledge.
 
@@ -94,7 +95,7 @@ This is perhaps the most important question for any Optimization Approach as it 
 There can be several reasons for performing an optimization in a Self-Adaptive System:
 \begin{itemize}[nosep]
     \item The system learned new information about, for example, its environment and needs to update its domain models.
-    \item Due to of external or internal changes, a Goal might not be satisfiable anymore.
+    \item Due to external or internal changes, a Goal might not be satisfiable anymore.
     \item The difference of the actual versus the expected outcome of a rule / policy has exceeded a threshold.
     \item A Utility function needs to be maximized or minimized.
 \end{itemize}
@@ -106,7 +107,7 @@ The original "Who?" question by Salehie and Tahvildari focuses on the level of h
 It is in the nature of Optimization Approaches for \acrlong{sas}[s] to change these rule sets.
 This can lead to problems that make human intervention necessary.
 A result of this is that, in contrast to the the taxonomy for \acrlong{sas}[s], 
-the Approach for Optimization Approaches should be its own dimension.
+the Approach for Optimization Approaches should have its own dimension.
 \begin{itemize}[nosep]
     \item Is there an internal component that performs changes or are they performed by an external actor.
     \item Which degree of decentralization is used?
@@ -130,7 +131,7 @@ The Reflective Adaptation Control can be classified by the following behaviors:
     \item Utility: An adaptation occurs to maximize or minimize a utility function.
 \end{itemize}
 
-\noindent Because the proposed classification is based upon the MAPE-K feedback loop and the 5W+1H questions,
+\noindent Because the proposed classification is based upon the \acrshort{mapek} feedback loop and the 5W+1H questions,
 it is useful to understand how they relate to each other.
 This is depicted in Figures \ref{fig:MapeOA} and \ref{fig:QuestionsOA}.
 
@@ -138,7 +139,7 @@ This is depicted in Figures \ref{fig:MapeOA} and \ref{fig:QuestionsOA}.
     \centering
     \begin{tabular}{|lcl|}
         \hline
-        Optimization Approach & & MAPE-K \\
+        \acrlong{oa} & & \acrshort{mapek} \\
         \hline
         Location & & Monitor, Analyze, Execute \\
         \hline
@@ -153,7 +154,7 @@ This is depicted in Figures \ref{fig:MapeOA} and \ref{fig:QuestionsOA}.
         Reflective Adaptation Control & & Plan, Execute \\
         \hline
     \end{tabular}
-    \caption{How the MAPE-K feedback loop by Kephart and Chess, 2003\cite*{VisionOfAutonomicComputing}
+    \caption{How the \acrshort{mapek} feedback loop by Kephart and Chess, 2003\cite*{VisionOfAutonomicComputing}
     relates to the dimensions of the classification for Optimization Approaches for \acrlong{sas}[s].}
     \label{fig:MapeOA}
 \end{figure}
@@ -162,7 +163,7 @@ This is depicted in Figures \ref{fig:MapeOA} and \ref{fig:QuestionsOA}.
     \centering
     \begin{tabular}{|lcl|}
         \hline
-        Optimization Approach & & 5W+1H questions \\
+        \acrlong{oa} & & 5W+1H questions \\
         \hline
         Location & & Where \\
         \hline
@@ -181,3 +182,5 @@ This is depicted in Figures \ref{fig:MapeOA} and \ref{fig:QuestionsOA}.
     relate to the dimensions of the classification for Optimization Approaches for \acrlong{sas}[s].}
     \label{fig:QuestionsOA}
 \end{figure}
+
+% TODO: Abschluss paragraph
